--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet/less" type="text/css" href="styles.less">
-	<link rel="stylesheet" href="css/reset.css">
-	<title>Carpathian</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Raleway:800" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+	<!--<link rel="stylesheet/less" type="text/css" href="styles.less" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0/less.min.js" ></script>-->
+
+	<link rel="stylesheet" href="css/reset.css">
+	
+	<title>Carpathian</title>
+	
+	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i|Raleway:300,400,800" rel="stylesheet">
+	
 	
 </head>
 
@@ -20,11 +28,11 @@
 				<img src="img/banner/logo.png" alt="#" class="logo">
 			</div>
 			<ul>
+				<li><a href="#form">&#9900; Contacts</a></li>
+				<li><a href="#from_blog">&#9900; Blog</a></li>
+				<li><a href="#portfolio">&#9900; Portfolio</a></li>
+				<li><a href="#about_us">&#9900; About us</a></li>
 				<li><a href="#carpathian">Home</a></li>
-				<li><a href="#about_us">About us</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#from_blog">Blog</a></li>
-				<li><a href="#form">Contacts</a></li>
 			</ul>
 		</header>
 	<h1>Carpathian</h1>
@@ -39,21 +47,35 @@
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a href="#">Load more</a>
+		<button class="button" type = "button"> load more </button>
 	</section>
 		
 	<section id="portfolio">
 		<h2 class="fontProperties">Portfolio</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
-		<a href="#">Nature</a>
-		<a href="#">Fashion</a>
-		<a href="#">People</a>
-		<a href="#">Architecture</a>
-		<div>
-			<img src="#" alt="#" class="Portfolio">
+		<div class="btn-group">
+			<button class="button" type = "button"> Nature </button>
+			<button class="button" type = "button"> Fashion </button>
+			<button class="button" type = "button"> People </button>
+			<button class="button" type = "button"> Architecture </button>
 		</div>
-		<a href="#">Load more</a>
+		<div class="portfolio_photos">
+			<img src="img/portfolio/image_1.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_2.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_3.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_4.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_5.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_6.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_7.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_8.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+		</div>
+		<button type = "button" class="button"> load more </button>
 	</section>
 
 	<section id="our_team">
@@ -64,10 +86,16 @@
 		<h2 class="fontProperties">Our skills</h2>
 	</section>
 	<section id="quote">	
-	<p>
+	<div class = left> 
+		<img src="img/quote/“_left.png" alt="#"> 
+	</div>
+	<p class="quote">
 		True beauty is something that attacks, overpowers, robs, and fi.
 	</p>
-	<p>
+	<div class = right> 
+		<img src="img/quote/”_right.png" alt="#"> 
+	</div>
+	<p class="author">
 		Yukio Mishima.
 	</p>
 	</section>
@@ -91,11 +119,11 @@
 		<h2>Contact us</h2>
 		<form>
 			<div>
-				<input type="text" name="firstname" placeholder="name" style="width: 238px; height: 48px">
-				<input type="email" name="email" placeholder="E-mail" style="width: 238px; height: 48px" required pattern="/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/">
+				<input type="text" name="firstname" placeholder="name" style="width: 249px; height: 48px">
+				<input type="email" name="email" placeholder="E-mail" style="width: 249px; height: 48px" required pattern="/^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/">
 			</div>
 			<div>
-				<textarea name="message" rows="10" cols="30" style="width: 498px; height: 216px"></textarea>
+				<textarea name="message" rows="10" cols="30" style="width: 504px; height: 216px"></textarea>
 			</div>
 			<div>
 				<input type="submit">
@@ -122,5 +150,10 @@
 		</div>
 		<h3>Carpathian &copy; 2018. All rights reserved.</h3>
 	</footer>
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
