--- a/app/index.html
+++ b/app/index.html
@@ -60,20 +60,20 @@
 		<h2 class="fontProperties">Portfolio</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
 		<div class="btn-group">
-			<button class="button" type = "button"> Nature </button>
-			<button class="button" type = "button"> Fashion </button>
-			<button class="button" type = "button"> People </button>
-			<button class="button" type = "button"> Architecture </button>
+			<div><button class="button_1" type = "button"> Nature </button></div>
+			<div><button class="button_1" type = "button"> Fashion </button></div>
+			<div><button class="button_1" type = "button"> People </button></div>
+			<div><button class="button" type = "button"> Architecture </button></div>
 		</div>
 		<div class="portfolio_photos">
-			<img src="img/portfolio/image_1.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_2.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_3.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_4.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_5.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_6.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_7.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_8.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_1.jpg" alt="#" class="portfolio_photos" style="width:338px; height:253px;">
+			<img src="img/portfolio/image_2.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_3.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_4.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_5.jpg" alt="#" class="portfolio_photos" style="width:338px; height:253px;">
+			<img src="img/portfolio/image_6.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_7.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_8.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
 		</div>
 		<button type = "button" class="button"> load more </button>
 	</section>
