--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,22 @@
 
 	<section id="our_team">
 		<h2 class="fontProperties">Our team</h2>
+		<div class="card">
+			<img src="img/our team/girl_1.jpg" alt="Kelly" style="width:100%">
+			<h2 class="cardname">Darlene Kelly</h2>
+			<p class="title">creative director</p>
+		</div>
+		<div class="card">
+			<img src="img/our team/girl_2.jpg" alt="Kelly" style="width:100%">
+			<h2 class="cardname">Darlene Kelly</h2>
+			<p class="title">photographer</p>
+		</div>
+		<div class="card">
+			<img src="img/our team/man.jpg" alt="Eduardo" style="width:100%">
+			<h2 class="cardname">Eduardo Howell</h2>
+			<p class="title">graphic designer</p>
+		</div>
+		
 	</section>
 	
 	<section id="our_skills">
@@ -101,6 +117,21 @@
 	</section>
 	<section id="services">
 		<h2 class="fontProperties">Services</h2>
+		<!--<div>
+				<img src="img/services/waom.jpg" alt="Kelly" style="width:100%">
+				<h2 class="servicename">Creativity</h2>
+				<p class="servicetext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed exercitationem cupiditate sapiente quibusdam at maiores officia voluptatum doloremque facilis nulla iste dicta atque numquam quae nemo quod, impedit officiis laborum!</p>
+		</div>
+		<div>
+			<img src="img/services/camea.jpg" alt="Kelly" style="width:100%">
+			<h2 class="servicename">Photography</h2>
+			<p class="servicetext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum laboriosam nemo harum, id tempora quae vitae, veniam rem eius tenetur placeat beatae, animi ad cupiditate? Non minus cum totam?</p>
+		</div>
+		<div>
+			<img src="img/services/noteook.jpg" alt="Eduardo" style="width:100%">
+			<h2 class="servicename">Performance</h2>
+			<p class="servicetext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, dolorum aperiam? Laudantium repudiandae reiciendis quo odit deleniti, eos blanditiis quos, magni quasi qui est impedit quas minus quaerat voluptate nisi.</p>
+		</div>-->
 	</section>
 
 	<section id="pricing">
@@ -113,6 +144,16 @@
 
 	<section id="our_clients">
 		<h2 class="fontProperties">Our clients</h2>
+		<div class="clients_logo">
+				<img src="img/our clients/client_1.png" alt="#" class="clients_logo" style="width:338px; height:253px;">
+				<img src="img/our clients/client_2.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+				<img src="img/our clients/client_3.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+				<img src="img/our clients/client_4.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+				<img src="img/our clients/client_5.png" alt="#" class="clients_logo" style="width:338px; height:253px;">
+				<img src="img/our clients/client_6.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+				<img src="img/our clients/client_7.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+				<img src="img/our clients/client_8.png" alt="#" class="clients_logo" style="width:337px; height:253px;">
+			</div>
 	</section>
 		
 	<section id="form">
