--- a/index.html
+++ b/index.html
@@ -60,26 +60,42 @@
 		<h2 class="fontProperties">Portfolio</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing</p>
 		<div class="btn-group">
-			<button class="button" type = "button"> Nature </button>
-			<button class="button" type = "button"> Fashion </button>
-			<button class="button" type = "button"> People </button>
-			<button class="button" type = "button"> Architecture </button>
+			<div><button class="button_1" type = "button"> Nature </button></div>
+			<div><button class="button_1" type = "button"> Fashion </button></div>
+			<div><button class="button_1" type = "button"> People </button></div>
+			<div><button class="button" type = "button"> Architecture </button></div>
 		</div>
 		<div class="portfolio_photos">
-			<img src="img/portfolio/image_1.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_2.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_3.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_4.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_5.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_6.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_7.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
-			<img src="img/portfolio/image_8.jpg" alt="#" class="portfolio_photos" style="width:400px; height:300px;">
+			<img src="img/portfolio/image_1.jpg" alt="#" class="portfolio_photos" style="width:338px; height:253px;">
+			<img src="img/portfolio/image_2.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_3.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_4.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_5.jpg" alt="#" class="portfolio_photos" style="width:338px; height:253px;">
+			<img src="img/portfolio/image_6.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_7.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
+			<img src="img/portfolio/image_8.jpg" alt="#" class="portfolio_photos" style="width:337px; height:253px;">
 		</div>
 		<button type = "button" class="button"> load more </button>
 	</section>
 
 	<section id="our_team">
 		<h2 class="fontProperties">Our team</h2>
+		<div class="card">
+			<img src="img/our team/girl_1.jpg" alt="Kelly" style="width:100%">
+			<h2 class="cardname">Darlene Kelly</h2>
+			<p class="title">creative director</p>
+		</div>
+		<div class="card">
+			<img src="img/our team/girl_2.jpg" alt="Kelly" style="width:100%">
+			<h2 class="cardname">Darlene Kelly</h2>
+			<p class="title">photographer</p>
+		</div>
+		<div class="card">
+			<img src="img/our team/man.jpg" alt="Eduardo" style="width:100%">
+			<h2 class="cardname">Eduardo Howell</h2>
+			<p class="title">graphic designer</p>
+		</div>
+		
 	</section>
 	
 	<section id="our_skills">
@@ -101,6 +117,21 @@
 	</section>
 	<section id="services">
 		<h2 class="fontProperties">Services</h2>
+		<div>
+				<img src="img/services/wacom.jpg" alt="wacom" style="width:75%">
+				<h2 class="servicename">Creativity</h2>
+				<p class="servicetext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed exercitationem cupiditate sapiente quibusdam at maiores officia voluptatum doloremque facilis nulla iste dicta atque numquam quae nemo quod, impedit officiis laborum!</p>
+		</div>
+		<div>
+			<img src="img/services/camera.jpg" alt="camera" style="width:50%">
+			<h2 class="servicename">Photography</h2>
+			<p class="servicetext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatum laboriosam nemo harum, id tempora quae vitae, veniam rem eius tenetur placeat beatae, animi ad cupiditate? Non minus cum totam?</p>
+		</div>
+		<div>
+			<img src="img/services/notebook.jpg" alt="notebook" style="width:75%">
+			<h2 class="servicename">Performance</h2>
+			<p class="servicetext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus, dolorum aperiam? Laudantium repudiandae reiciendis quo odit deleniti, eos blanditiis quos, magni quasi qui est impedit quas minus quaerat voluptate nisi.</p>
+		</div>
 	</section>
 
 	<section id="pricing">
@@ -113,6 +144,31 @@
 
 	<section id="our_clients">
 		<h2 class="fontProperties">Our clients</h2>
+		<div class="clients_logo">
+				<article class="clients">
+						<span></span><img src="img/our clients/client_1.jpeg" alt="logo">
+					</article> 
+				<article class="clients">
+						<span></span><img src="img/our clients/client_2.jpeg" alt="logo">
+					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_3.jpeg" alt="logo">
+					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_4.jpeg" alt="logo">					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_5.jpeg" alt="logo">
+					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_6.jpeg" alt="logo">
+					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_7.jpeg" alt="logo">
+					</article>
+				<article class="clients">
+						<span></span><img src="img/our clients/client_8.jpeg" alt="logo">
+					</article>
+			</div>
 	</section>
 		
 	<section id="form">
