--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
-	<!--<link rel="stylesheet/less" type="text/css" href="styles.less" />
-	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0/less.min.js" ></script>-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="css/reset.css">
 	
@@ -136,6 +133,54 @@
 
 	<section id="pricing">
 		<h2 class="fontProperties">Pricing</h2>	
+
+		<div class="container">
+			<div class="card-deck">
+			  <div class="card">
+				<div class="card-header">
+				  <h4 class="my-0-font">Basic</h4>
+				</div>
+				<div class="card-body">
+				  <h1 class="card-title">1O<span style="font-size:24px">$</span></h1>
+				  <ul class="list">
+					<li>24/7 support</li>
+					<li>free domain</li>
+					<li>modern design</li>
+					</ul>
+				  <button type="button" class="btn-lg">buy now</button>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-header">
+				  <h4 class="my-0-font">Professional</h4>
+				</div>
+				<div class="card-body">
+				  <h1 class="card-title">3O<span style="font-size:24px">$</span></h1>
+				  <ul class="list">
+					<li>24/7 support</li>
+					<li>free domain</li>
+					<li>modern design</li>
+				  </ul>
+				  <button type="button" class="btn-lg">buy now</button>
+				</div>
+			  </div>
+			  <div class="card">
+				<div class="card-header">
+				  <h4 class="my-0-font">vip</h4>
+				</div>
+				<div class="card-body">
+				  <h1 class="card-title">5O<span style="font-size:24px">$</span></h1>
+				  <ul class="list">
+					<li>24/7 support</li>
+					<li>free domain</li>
+					<li>modern design</li>
+				  </ul>
+				  <button type="button" class="btn-lg">buy now</button>
+				</div>
+			  </div>
+			</div>
+	  
+
 	</section>
 
 	<section id="from_blog">
@@ -207,9 +252,9 @@
 		<h3>Carpathian &copy; 2018. All rights reserved.</h3>
 	</footer>
 <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 </body>
 </html>
