--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<section id="carpathian">
 		<header>
 			<div>
-				<img src="img/banner/logo.png" alt="#" class="logo">
+				<img src="img/banner/logo.png" alt="logo" class="logo">
 			</div>
 			<ul>
 				<li><a href="#form">&#9900; Contacts</a></li>
@@ -32,8 +32,8 @@
 				<li><a href="#carpathian">Home</a></li>
 			</ul>
 		</header>
-	<h1>Carpathian</h1>
-	<h2>graphic design studio</h2>
+		<h1>Carpathian</h1>
+		<h2>graphic design studio</h2>
 	</section>
 
 
